[gd_scene load_steps=9 format=3 uid="uid://b2pw0xcwxp4rs"]

[ext_resource type="Script" path="res://scenes/hazards/door/Door.gd" id="1_r6ktq"]
[ext_resource type="Texture2D" uid="uid://cemb8bfkrmhxq" path="res://assets/dino1.png" id="2_3pofd"]
[ext_resource type="Texture2D" uid="uid://lpqiyqhfgvnb" path="res://assets/door.png" id="3_xthm3"]
[ext_resource type="Texture2D" uid="uid://cu2h3beblyhnm" path="res://assets/door-open.png" id="4_rdqwc"]
[ext_resource type="PackedScene" uid="uid://dktekeg5qv7p6" path="res://scenes/Interact/interact.tscn" id="5_sj7hi"]
[ext_resource type="Shader" path="res://utils/glow.gdshader" id="5_sloko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5w256"]
size = Vector2(16, 22)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x13lo"]
shader = ExtResource("5_sloko")
shader_parameter/line_color = Vector4(1, 1, 0, 1)
shader_parameter/line_thickness = 1.0

[node name="Door" type="StaticBody2D"]
z_index = -1
collision_layer = 3
collision_mask = 0
script = ExtResource("1_r6ktq")

[node name="dino_dead" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(-12, -15)
scale = Vector2(1.22146, 0.654179)
texture = ExtResource("2_3pofd")
offset = Vector2(-10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_5w256")

[node name="DoorClosed" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, -14)
texture = ExtResource("3_xthm3")

[node name="DoorOpen" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(-16, -14)
texture = ExtResource("4_rdqwc")

[node name="Interact" parent="." instance=ExtResource("5_sj7hi")]
unique_name_in_owner = true
position = Vector2(0, 10)
scale = Vector2(0.333, 0.333)

[node name="Sprite2D" type="Sprite2D" parent="Interact"]
texture_filter = 1
material = SubResource("ShaderMaterial_x13lo")
position = Vector2(0, -72.0721)
scale = Vector2(3.003, 3.003)
texture = ExtResource("3_xthm3")
